--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "appcenter-analytics": "^1.1.0",
     "appcenter-crashes": "^1.1.0",
     "react": "16.2.0",
-    "react-native": "0.52.2"
+    "react-native": "0.52.2",
+    "react-router-native": "^4.2.0"
   },
   "devDependencies": {
     "@types/jest": "^22.1.0",
     "@types/react": "^16.0.35",
     "@types/react-native": "^0.52.5",
+    "@types/react-router-native": "^4.0.2",
     "@types/react-test-renderer": "^16.0.0",
     "babel-jest": "22.1.0",
     "babel-preset-react-native": "4.0.0",
